--- a/views/index.html
+++ b/views/index.html
@@ -6,20 +6,34 @@
 		<script src="../app.js"></script>
 		<script src="../components/keyComponent.js"></script>
 		<link rel='stylesheet' href='../assets/style.css'>
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 		<title>Keyboard Piano</title>
 	</head>
 
 	<body ng-controller="NotesCtrl as Notes">
-		<h1>{{Notes.title}}</h1>
+		<h1 class='header'>{{Notes.title}}</h1>
+
+		<div class='staff'>
+			<img  id='staff-img' src='../assets/imgs/staff.jpg' alt='staff'>
+		</div>
 
 		<div class='keys'>
 			<div class='black-keys'>
-				{{ Notes.blackNote }}
-				{{ Notes.keyStroke }}
+				<div id='Csharp'>W</div>
+				<div id='Dsharp'>E</div>
+				<div id='Fsharp'>T</div>
+				<div id='Gsharp'>Y</div>
+				<div id='Asharp'>U</div>
 			</div>
 			<div class='white-keys'>
-				{{ Notes.whiteNote }}
-				{{ Notes.keyStroke }}
+				<div id='C'>A</div>
+				<div id='D'>S</div>
+				<div id='E'>D</div>
+				<div id='F'>F</div>
+				<div id='G'>G</div>
+				<div id='A'>H</div>
+				<div id='B'>J</div>
+				<div id='C2'>K</div>
 			</div>
 		</div>
 	</body>
