--- a/views/index.html
+++ b/views/index.html
@@ -19,21 +19,47 @@
 
 		<div class='keys'>
 			<div class='black-keys'>
-				<div id='Csharp'>W</div>
-				<div id='Dsharp'>E</div>
-				<div id='Fsharp'>T</div>
-				<div id='Gsharp'>Y</div>
-				<div id='Asharp'>U</div>
+				<div id='Csharp'>
+					<p>W</p>
+				</div>
+				<div id='Dsharp'>
+					<p>E</p>
+				</div>
+				<div id='Fsharp'>
+					<p>T</p>
+				</div>
+				<div id='Gsharp'>
+					<p>Y</p>
+				</div>
+				<div id='Asharp'>
+					<p>U</p>
+				</div>
 			</div>
 			<div class='white-keys'>
-				<div id='C'>A</div>
-				<div id='D'>S</div>
-				<div id='E'>D</div>
-				<div id='F'>F</div>
-				<div id='G'>G</div>
-				<div id='A'>H</div>
-				<div id='B'>J</div>
-				<div id='C2'>K</div>
+				<div id='C'>
+					<p>A</p>
+				</div>
+				<div id='D'>
+					<p>S</p>
+				</div>
+				<div id='E'>
+					<p>D</p>
+				</div>
+				<div id='F'>
+					<p>F</p>
+				</div>
+				<div id='G'>
+					<p>G</p>
+				</div>
+				<div id='A'>
+					<p>H</p>
+				</div>
+				<div id='B'>
+					<p>J</p>
+				</div>
+				<div id='C2'>
+					<p>K</p>
+				</div>
 			</div>
 		</div>
 	</body>
