--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 		<script src="../app.js"></script>
 		<script src="../components/keyComponent.js"></script>
+		<script src="http://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 		<link rel='stylesheet' href='../assets/style.css'>
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 		<title>Keyboard Piano</title>
