--- a/views/index.html
+++ b/views/index.html
@@ -17,38 +17,60 @@
 
 		<div class='staff'>
 			<img  id='staff-img' src='../assets/imgs/staff.jpg' alt='staff'>
+			<div  ng-repeat='musicNotes in noteSelected'>
+				<div>{{musicNotes}}</div>
+			</div>
 		</div>
 
-		<div class='keys'>
+		<div class='keys' ng-keypress='$scope.handleKeyPress($event)'>
 			<div class='black-keys'>
-				<button data-note='Csharp' id='Csharp' ng-click='keyPress($event)'></button>
-				<button data-note='Dsharp' id='Dsharp' ng-click='keyPress($event)'></button>
-				<button data-note='Fsharp' id='Fsharp' ng-click='keyPress($event)'></button>
-				<button data-note='Gsharp' id='Gsharp' ng-click='keyPress($event)'></button>
-				<button data-note='Asharp' id='Asharp' ng-click='keyPress($event)'></button>
+				<button data-note='Csharp' id='Csharp' ng-click='keyPress($event)'>
+					<p>W</p>
+				</button>
+				<button data-note='Dsharp' id='Dsharp' ng-click='keyPress($event)'>
+					<p>E</p>
+				</button>
+				<button data-note='Fsharp' id='Fsharp' ng-click='keyPress($event)'>
+					<p>T</p>
+				</button>
+				<button data-note='Gsharp' id='Gsharp' ng-click='keyPress($event)'>
+					<p>Y</p>
+				</button>
+				<button data-note='Asharp' id='Asharp' ng-click='keyPress($event)'>
+					<p>U</p>
+				</button>
 
 				<audio data-note='Csharp' src='../assets/sounds/Piano12.mp3'></audio>
 				<audio data-note='Dsharp' src='../assets/sounds/Piano14.mp3'></audio>
-				<audio data-note='Fsharp' src='../assets/sounds/Piano16.mp3'></audio>
-				<audio data-note='Gsharp' src='../assets/sounds/Piano18.mp3'></audio>
-				<audio data-note='Asharp' src='../assets/sounds/Piano110.mp3'></audio>
+				<audio data-note='Fsharp' src='../assets/sounds/Piano17.mp3'></audio>
+				<audio data-note='Gsharp' src='../assets/sounds/Piano19.mp3'></audio>
+				<audio data-note='Asharp' src='../assets/sounds/Piano111.mp3'></audio>
 			</div>
 			<div class='white-keys'>
-				<button data-note='C' id='C' ng-click='keyPress($event)'></button>
-				<button data-note='D' id='D' ng-click='keyPress($event)'></button>
-				<button data-note='E' id='E' ng-click='keyPress($event)'></button>
-				<button data-note='F' id='F' ng-click='keyPress($event)'></button>
-				<button data-note='G' id='G' ng-click='keyPress($event)'></button>
-				<button data-note='A' id='A' ng-click='keyPress($event)'></button>
-				<button data-note='B' id='B' ng-click='keyPress($event)'></button>
-				<button data-note='C2' id='C2' ng-click='keyPress($event)'></button>
+				<button data-note='C' id='C' ng-click='keyPress($event)'>	<p>A</p>
+				</button>
+				<button data-note='D' id='D' ng-click='keyPress($event)'>	<p>S</p>
+				</button>
+				<button data-note='E' id='E' ng-click='keyPress($event)'>	<p>D</p>
+				</button>
+				<button data-note='F' id='F' ng-click='keyPress($event)'>	<p>F</p>
+				</button>
+				<button data-note='G' id='G' ng-click='keyPress($event)'>	<p>G</p>
+				</button>
+				<button data-note='A' id='A' ng-click='keyPress($event)'>	<p>H</p>
+				</button>
+				<button data-note='B' id='B' ng-click='keyPress($event)'>	<p>J</p>
+				</button>
+				<button data-note='C2' id='C2' ng-click='keyPress($event)'>
+					<p>K</p>
+				</button>
 
 				<audio data-note='C' src='../assets/sounds/Piano11.mp3'></audio>
 				<audio data-note='D' src='../assets/sounds/Piano13.mp3'></audio>
 				<audio data-note='E' src='../assets/sounds/Piano15.mp3'></audio>
-				<audio data-note='F' src='../assets/sounds/Piano17.mp3'></audio>
-				<audio data-note='G' src='../assets/sounds/Piano19.mp3'></audio>
-				<audio data-note='A' src='../assets/sounds/Piano111.mp3'></audio>
+				<audio data-note='F' src='../assets/sounds/Piano16.mp3'></audio>
+				<audio data-note='G' src='../assets/sounds/Piano18.mp3'></audio>
+				<audio data-note='A' src='../assets/sounds/Piano110.mp3'></audio>
 				<audio data-note='B' src='../assets/sounds/Piano112.mp3'></audio>
 				<audio data-note='C2' src='../assets/sounds/Piano113.mp3'></audio>
 			</div>
