--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,48 @@
 
 #staff-img {
 	height: 35%;
-	width: 35%;
+	width: 45%;
 	padding-top: 30px;
+	z-index: -1;
+}
+
+.quarternote {
+	height: 5%;
+	width: 5%;
+	display: flex;
+	flex-wrap: 'wrap';
+	float: left;
+}
+
+.button-row {
+	text-align: center;
+}
+
+#play {
+	background-color: #e7e7e7;
+	color: black;
+	font-size: 16px;
+	margin-right: 15px;
+	text-align: center;
+	display: inline-block;
+}
+
+#save {
+	background-color: #e7e7e7;
+	color: black;
+	font-size: 16px;
+	margin-right: 15px;
+	text-align: center;
+	display: inline-block;
+}
+
+#clear {
+	background-color: #e7e7e7;
+	color: black;
+	font-size: 16px;
+	margin-right: 15px;
+	text-align: center;
+	display: inline-block;
 }
 
 .keys {
