--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,6 @@
 
 	<body id='note-array' ng-controller="NotesCtrl as Notes">
 		<h1 class='header'>{{Notes.title}}</h1>
-		<div class="test">{{Notes.testNote}}</div>
 		<div class='staff'>
 			<img  id='staff-img' src='../assets/imgs/staff.gif' alt='staff'>
 			<div ng-repeat='notes in noteSelected'>
@@ -23,12 +22,12 @@
 		</div>
 
 		<div class='button-row'>
-			<button id='play'>Play</button>
+			<button id='play' ng-click='playComposition()'>Play</button>
 			<button id='save'>Save</button>
-			<button id='clear' ng-click='clearStaff($event)'>Clear</button>
+			<button id='clear' ng-click='clearStaff()'>Clear</button>
 		</div>
 
-		<div class='keys' ng-keypress='$scope.handleKeyPress($event)'>
+		<div class='keys'>
 			<div class='black-keys'>
 				<div data-note='Csharp' id='Csharp'>
 					<p>W</p>
