--- a/assets/style.css
+++ b/assets/style.css
@@ -23,8 +23,20 @@
 	float: left;
 }
 
+.composition {
+	position: relative;
+	transform: translateX(190px);
+}
+
+#playedC {
+	transform: translateY(-100px);
+	z-index: 1;
+}
+
 .button-row {
 	text-align: center;
+	position: absolute;
+	z-index: -1;
 }
 
 #play {
