backend started, css edits, play function created

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,7 +1,12 @@
+body {
+	background-image: url('./imgs/pianobackground.jpg');
+}
+
 .header {
 	text-align: center;
 	font-family: 'Source Sans Prop', sans-serif;
 	font-size: 60px;
+	color: white;
 }
 
 .composition {
